deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata: { name: task-service, namespace: misha-course }
spec:
  selector: { app: task-service }
  ports: [{ port: 80, targetPort: 8080 }]
